# Mengine

./: .cirrus.yml  .cppcheck  .gitconfig  .gitignore  .travis.yml  AGENTS.md  GetDepends.bat  GetDepends.sh  LICENSE  Menge.sln  MengeStatic.sln  README.md  SECURITY.md  appveyor.yml  changelog.txt  compile_copy.py  menge.txt  problems.txt  roadmap.md  roadmap.txt  tatus  test.txt  tool.rar  win32_post_commit_hook.bat.js
CMake/AEPlugin/: CMakeLists.txt
CMake/Android_SDL/: CMakeLists.txt
CMake/Dependencies/: CMakeLists.txt  menge_macro.cmake
CMake/Depends_Android_SDL/: CMakeLists.txt
CMake/Depends_EMSCRIPTEN/: CMakeLists.txt
CMake/Depends_IPAD/: CMakeLists.txt
CMake/Depends_MinGW/: CMakeLists.txt
CMake/Depends_SDL32/: CMakeLists.txt
CMake/Depends_WIN32/: CMakeLists.txt
CMake/Depends_WIN32_SDL/: CMakeLists.txt
CMake/Depends_WIN64/: CMakeLists.txt
CMake/Depends_WIN64_SDL/: CMakeLists.txt
CMake/Depends_Xcode_IOS_SDL/: CMakeLists.txt
CMake/Depends_Xcode_IOS_SDL_Simulator/: CMakeLists.txt
CMake/Depends_Xcode_SDL/: CMakeLists.txt
CMake/Downloads/: CMakeLists.txt  download_template.cmake  dummy.cpp
CMake/MinGW/: CMakeLists.txt
CMake/SDL32/: CMakeLists.txt
CMake/Tools_MinGW/: CMakeLists.txt
CMake/Tools_Win32/: CMakeLists.txt
CMake/Win32/: CMakeLists.txt  Config_WIN32.h
CMake/Win32_SDL/: CMakeLists.txt
CMake/Win64/: CMakeLists.txt
CMake/Win64_SDL/: CMakeLists.txt
CMake/Xcode_IOS_SDL/: CMakeLists.txt
CMake/Xcode_IOS_SDL_Simulator/: CMakeLists.txt
CMake/Xcode_SDL/: CMakeLists.txt
cmake/Android_SDL/: CMakeLists.txt
cmake/Dependencies/: CMakeLists.txt
src/: CMakeLists.txt  test
src/AEPlugin/: CMakeLists.txt
src/Bootstrapper/: Bootstrapper.cpp  Bootstrapper.h  CMakeLists.txt
src/Config/: .gitignore  Abs.h  Algorithm.h  Array.h  ArrayString.h  Atomic.h  Blobject.h  BuildInfo.h.in  BuildVersion.h.in  CMakeLists.txt  Char.h  Config.h  Define.h  Defines.h  Deque.h  DynamicArray.h  DynamicCast.h  Export.h  Floats.h  GitSHA1.h.in  HashType.h  InitializerList.h  Iterator.h  Lambda.h  Limits.h  List.h  Map.h  Metaprogramming.h  New.h  NotificatorId.h  Numeric.h  Pair.h  Path.h  Platform.h  Regex.h  Secure.h  Set.h  StatisticId.h  StdAlgorithm.h  StdArg.h  (+44 more)
src/Engine/: Account.cpp  Account.h  AccountManager.cpp  AccountManager.h  Application.cpp  Application.h  ArrowPrototypeGenerator.cpp  ArrowPrototypeGenerator.h  BlobShadow3D.cpp  BlobShadow3D.h  CMakeLists.txt  CapsuleController.cpp  Consts.cpp  Consts.h  DirectionalLight3D.cpp  DirectionalLight3D.h  Engine.h  EntityPrototypeGenerator.cpp  EntityPrototypeGenerator.h  Game.h  GameService.cpp  GameService.h  GameServiceAccountProvider.cpp  GameServiceAccountProvider.h  GameServiceSoundVolumeProvider.h  GlobalAffectorable.cpp  GlobalAffectorable.h  GlobalHandleSystem.cpp  GlobalHandleSystem.h  Grid2D.cpp  Grid2D.h  Gyroscope.cpp  Gyroscope.h  HotSpot.cpp  HotSpot.h  HotSpotBubbles.cpp  HotSpotBubbles.h  HotSpotCircle.cpp  HotSpotCircle.h  HotSpotEventReceiverInterface.h  (+198 more)
src/Environment/: CMakeLists.txt
src/FileSystem/: FileData.cpp  FileData.h  FileSystem.cpp  FileSystem.def  FileSystem.vcproj  ZipArch.h  interfaces.h
src/Framework/: Framework.h  Framework.vcproj  main.cpp
src/Frameworks/: CMakeLists.txt
src/Game/: Game.rc  Game.vcproj  main.cpp  resource.h
src/IOSApplication/: CMakeLists.txt  EAGLView.h  EAGLView.mm  ESRenderer.h  MainWindow.xib  MengineAppDelegate.h  MengineAppDelegate.mm  iOSApplication.cpp  iOSApplication.h  iOSFileSystem.h  main.m
src/InputSystem/: InputCore.h  InputFunctionMap.h  InputSystem.cpp  InputSystem.h  InputSystem.vcproj
src/Interface/: AccountInterface.h  AccountProviderInterface.h  AccountServiceInterface.h  AccountSettingProviderInterface.h  AffectorHubInterface.h  AllocatorServiceInterface.h  AllocatorSystemInterface.h  AmplifierInterface.h  AmplifierServiceInterface.h  AnalyticsContextInterface.h  AnalyticsEventBuilderInterface.h  AnalyticsEventInterface.h  AnalyticsEventParameterInterface.h  AnalyticsEventProviderInterface.h  AnalyticsServiceInterface.h  AnalyticsSystemInterface.h  AndroidAssetServiceInterface.h  AndroidEnvironmentServiceInterface.h  AndroidKernelServiceInterface.h  AndroidPlatformExtensionInterface.h  AnimationInterface.h  AppleAdvertisementInterface.h  AppleEnvironmentServiceInterface.h  AppleKernelServiceInterface.h  ApplicationInterface.h  ArchivatorInterface.h  ArchiveInterface.h  ArchiveServiceInterface.h  ArgumentsInterface.h  ArrowInterface.h  ArrowServiceInterface.h  BootstrapperInterface.h  CMakeLists.txt  COMInterface.h  COMMengineInterface.h  CacheInterface.h  ChronometerInterface.h  ChronometerServiceInterface.h  CodecFactoryInterface.h  CodecInterface.h  (+283 more)
src/Kernel/: Abort.cpp  Abort.h  AccountUID.h  Affector.cpp  Affector.h  AffectorCallbackInterface.h  AffectorHelper.cpp  AffectorHelper.h  AffectorType.cpp  AffectorType.h  Affectorable.cpp  Affectorable.h  AllocatorHelper.cpp  AllocatorHelper.h  AnalyticsHelper.h  Animatable.cpp  Animatable.h  AnimationEventReceiver.h  Archive.h  Archive.hpp  ArchiveWrite.h  ArchiveWrite.hpp  ArgsToString.h  Array.h  ArrayString.h  ArrayTString.h  ArrayWString.h  Arrow.cpp  Arrow.h  ArrowInputMousePositionProvider.cpp  ArrowInputMousePositionProvider.h  AspectRatioViewport.h  AspectRatioViewports.h  Assertion.cpp  Assertion.h  AssertionAllocator.h  AssertionCharacter.cpp  AssertionCharacter.h  AssertionCompilable.h  AssertionContainer.h  (+854 more)
src/MacOSApplication/: CMakeLists.txt  LoggerConsole.cpp  LoggerConsole.h  MacOSApplication.cpp  MacOSApplication.h  MengineOpenGLView.h  main.cpp
src/ManagedFramework/: AssemblyInfo.cpp  ExampleMCppBridge.vcproj  FrameworkCppBridge.cpp  FrameworkCppBridge.h  ManagedFramework.cpp  ManagedFramework.h  ManagedFramework.vcproj
src/Manager/: ErrorMessage.h  Manager.vcproj  XmlManager.h
src/MarmaladeApplication/: MarmaladeApplication.cpp  MarmaladeApplication.h  MarmaladeFileGroupDirectory.cpp  MarmaladeFileGroupDirectory.h  MarmaladeFileInputStream.cpp  MarmaladeFileInputStream.h  MarmaladeFileOutputStream.h  MarmaladeInput.cpp  main.cpp  (+10 more)
(+13907 files in other folders)
