if(MENGINE_USE_PRECOMPILED_HEADER)
    ADD_SUBDIRECTORY(PrecompiledHeader)
endif()

ADD_SUBDIRECTORY(Config)

ADD_SUBDIRECTORY(Kernel)
ADD_SUBDIRECTORY(Metacode)
ADD_SUBDIRECTORY(Services)
ADD_SUBDIRECTORY(Systems)
ADD_SUBDIRECTORY(Engine)

ADD_SUBDIRECTORY(Interface)

IF(MENGINE_EXTERNAL_SOURCE)
    ADD_SUBDIRECTORY(${MENGINE_EXTERNAL_SOURCE_PATH} ${MENGINE_EXTERNAL_TEMP_PATH})
ENDIF()

ADD_SUBDIRECTORY(Environment)

ADD_SUBDIRECTORY(Frameworks)

ADD_SUBDIRECTORY(Plugins)
ADD_SUBDIRECTORY(Platforms)

ADD_SUBDIRECTORY(Bootstrapper)
ADD_SUBDIRECTORY(Mengine)

SET(APPLICATION_COCOAPODS ${APPLICATION_COCOAPODS} PARENT_SCOPE)
SET(APPLICATION_LINK_LIBRARIES ${APPLICATION_LINK_LIBRARIES} PARENT_SCOPE)
SET(APPLICATION_DEPENDENCIES ${APPLICATION_DEPENDENCIES} PARENT_SCOPE)
SET(APPLICATION_STATIC_PLUGINS ${APPLICATION_STATIC_PLUGINS} PARENT_SCOPE)