if(MENGINE_USE_PRECOMPILED_HEADER)
    ADD_SUBDIRECTORY(PrecompiledHeader)
endif()

ADD_SUBDIRECTORY(Kernel)

if(MENGINE_PLUGIN_METABUF)
    ADD_SUBDIRECTORY(Metacode)
endif()

ADD_SUBDIRECTORY(Services)
ADD_SUBDIRECTORY(Systems)
ADD_SUBDIRECTORY(Engine)

ADD_SUBDIRECTORY(Interface)

ADD_SUBDIRECTORY(Environment)

ADD_SUBDIRECTORY(Frameworks)

ADD_SUBDIRECTORY(Plugins)
ADD_SUBDIRECTORY(Platforms)

ADD_SUBDIRECTORY(Bootstrapper)
ADD_SUBDIRECTORY(Mengine)

ADD_SUBDIRECTORY(Config)

MENGINE_SUBFOLDER()